--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               alt=""
               class="avatar-image"
             />
-            <p class="avatar-desc">aqui va la desc de cada quien</p>
+            <p class="avatar-desc">nueva desc</p>
           </div>
         </div>
       </div>
