--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
         <div class="avatar-card">
           <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="" class="avatar-image" />
           <p class="avatar-desc">nueva desc</p>
-          <p class="avatar-desc">aluzdev description</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-3">
+        <!-- aqui van las cards -->
+        <div class="avatar-card">
+          <img src="/home/cris/gen30_practicagit/assets/cris.jpeg" alt="" class="avatar-image" />
+          <p class="avatar-desc">React Fron-end Developer</p>
         </div>
       </div>
     </div>
