añadí mi nombre y descripción

--- a/index.html
+++ b/index.html
@@ -25,7 +25,22 @@
               alt=""
               class="avatar-image"
             />
-            <p class="avatar-desc">nueva desc</p>
+            <p class="avatar-desc">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint,
+              omnis dolorum praesentium est nisi nobis mollitia, nam pariatur
+              excepturi inventore quas explicabo ipsa culpa tempore odit vel
+              dolore perspiciatis. Modi.
+            </p>
+          </div>
+          <div class="avatar-card">
+            <img
+              src="https://avatars.githubusercontent.com/u/127574506?v=4"
+              alt=""
+              class="avatar-image"
+            />
+            <p class="avatar-desc">
+              Hola soy Juan! de 27 años, koder y arquitecto.
+            </p>
           </div>
         </div>
       </div>
