added avatar Carlos Hermosillo

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           <!-- aqui van las cards -->
           <div class="avatar-card">
             <img
-              src="https://randomuser.me/api/portraits/men/32.jpg"
+              src="https://scontent.fcul2-1.fna.fbcdn.net/v/t39.30808-6/331298768_1049211896035015_5872585270666989120_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeGT1CQsXpJLscYq8yYslwAm6rFQMI-_p1zqsVAwj7-nXIT95WpMcNTl1UbU2pjfEKwpJYQpyG_pSjmcRt2Haqhe&_nc_ohc=q6HZnMxhNwsAX-C6KfC&_nc_ht=scontent.fcul2-1.fna&oh=00_AfA5vRVo5UVLLnek0Cwjjmph42QArq1NI44wBJNEjQhgdg&oe=655A24CD"
               alt=""
               class="avatar-image"
             />
-            <p class="avatar-desc">nueva desc</p>
+            <p class="avatar-desc">Carlos Hermosillo</p>
           </div>
         </div>
       </div>
