--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
             />
             <p class="avatar-desc">nueva desc</p>
           </div>
+
+          <div class="avatar-card">
+            <img
+              src="https://images2.alphacoders.com/129/1290712.jpg"
+              alt=""
+              class="avatar-image"
+            />
+            <p class="avatar-desc">adolfo953</p>
+          </div>
         </div>
       </div>
     </div>
