--- a/index.html
+++ b/index.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+<link rel="stylesheet" href="./css/styles.css" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Practica pull request</title>
+</head>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practica pull request</title>
-  </head>
-  <body>
-    <h1 class="title">Lista de Koders</h1>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-3">
-          <!-- aqui van las cards -->
-          <div class="avatar-card">
-            <img src="./assets/avatar_jorge.jpg" alt="" class="avatar-image" />
-            <p class="avatar-desc">Jorge</p>
-          </div>
+<body>
+  <h1 class="title">Lista de Koders</h1>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-3">
+        <!-- aqui van las cards -->
+        <div class="avatar-card">
+          <img src="./assets/avatar_jorge.jpg" alt="" class="avatar-image" />
+          <p class="avatar-desc">Jorge</p>
         </div>
-        <div class="col-3">
-          <!-- aqui van las cards -->
-          <div class="avatar-card">
-            <img
-              src="./assets/IMG_4799.jpeg"
-              alt="perfil"
-              class="avatar-image"
-            />
-            <p class="avatar-desc">Ani Melendrez - Programando pasteles</p>
-          </div>
+
+        <div class="avatar-card">
+          <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="" class="avatar-image" />
+          <p class="avatar-desc">nueva desc</p>
+        </div>
+      </div>
+      <div class="col-3">
+        <!-- aqui van las cards -->
+        <div class="avatar-card">
+          <img src="./assets/IMG_4799.jpeg" alt="perfil" class="avatar-image" />
+          <p class="avatar-desc">Ani Melendrez - Programando pasteles</p>
+        </div>
+      </div>
+
+      <div class="col-3">
+        <div class="avatar-card">
+          <img src="assets/cris.jpeg" alt="" class="avatar-image" />
+          <p class="avatar-desc">React Front-end Developer</p>
         </div>
       </div>
     </div>
@@ -43,11 +44,7 @@
         <div class="col-3">
           <!-- aqui van las cards -->
           <div class="avatar-card">
-            <img
-              src="https://ca.slack-edge.com/TCRFJBKB6-U05U8815HDL-0e3cbcc6d6db-512"
-              alt=""
-              class="avatar-image"
-            />
+            <img src="https://ca.slack-edge.com/TCRFJBKB6-U05U8815HDL-0e3cbcc6d6db-512" alt="" class="avatar-image" />
             <p class="avatar-desc">
               Hola mi nombre es Cristina Hicks tengo 34 años Y vivo en la CDMX
             </p>
@@ -55,10 +52,9 @@
         </div>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
