--- a/index.html
+++ b/index.html
@@ -21,15 +21,12 @@
           <!-- aqui van las cards -->
           <div class="avatar-card">
             <img
-              src="https://randomuser.me/api/portraits/men/32.jpg"
+              src="https://cdn.pixabay.com/photo/2016/02/06/23/08/street-art-1183812_640.jpg"
               alt=""
               class="avatar-image"
             />
             <p class="avatar-desc">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint,
-              omnis dolorum praesentium est nisi nobis mollitia, nam pariatur
-              excepturi inventore quas explicabo ipsa culpa tempore odit vel
-              dolore perspiciatis. Modi.
+              Carlos Gastelum
             </p>
           </div>
         </div>
