--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
         </div>
       </div>
     </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-3">
+          <div class="avatar-card">
+            <img
+              src="./assets/selfie.jpg"
+              alt=""
+              class="avatar-image"
+            />
+            <p class="avatar-desc">Veronica Vera</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
