--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
         <div class="col-3">
           <!-- aqui van las cards -->
           <div class="avatar-card">
-            <img
-              src="https://randomuser.me/api/portraits/men/32.jpg"
-              alt=""
-              class="avatar-image"
-            />
-            <p class="avatar-desc">nueva desc</p>
+            <img src="./assets/Oscar_Montes.jpg" alt="" class="avatar-image" />
+            <p class="avatar-desc">OSCAR MONTES RODRIGUEZ</p>
           </div>
         </div>
       </div>
