Feat: Commit of Eloy Gutierrez

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
               excepturi inventore quas explicabo ipsa culpa tempore odit vel
               dolore perspiciatis. Modi.
             </p>
+           <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&amp;auto=format&amp;fit=crop&amp;q=60&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmFuZG9tJTIwcGVyc29ufGVufDB8fDB8fHw"
+              alt=""
+              class="avatar-card"
+           >
+
+            <p class="avatar-desc">
+              Eloy Gutierrez Sauceda
+            </p>
           </div>
         </div>
       </div>
