--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             />
             <p class="avatar-desc">Ani Melendrez - Programando pasteles</p>
           </div>
+        </div>
+        <div class="col-3">
+          <!-- aqui van las cards -->
           <div class="avatar-card">
             <img
               src="https://scontent.fntr11-1.fna.fbcdn.net/v/t1.6435-9/45518696_10160975824080305_3300527769628180480_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=be3454&_nc_eui2=AeGoSENzNygXtk0wEngNYhgOO3oP9wSO7Kk7eg_3BI7sqbBpJVYFxigEclnWg8FIueU&_nc_ohc=m-DK_Xc0g28AX8Arw2P&_nc_ht=scontent.fntr11-1.fna&oh=00_AfAA4mX9WpLcakUgYKQzcS_bWdnmrK6B_AJ6o35honHRcg&oe=657CFBEC"
