--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="col-3">
           <!-- aqui van las cards -->
           <div class="avatar-card">
-            <img src="./assets/world.png" alt="Mi foto" class="avatar-image" />
+            <img src="./assets/Mitch.jpg" alt="Mi foto" class="avatar-image" />
             <p class="avatar-desc">Mitchel Cruz</p>
           </div>
         </div>
