--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="col-3">
           <!-- aqui van las cards -->
           <div class="avatar-card">
+            <<<<<<< .merge_file_nHydvx
             <img src="./assets/avatar_jorge.jpg" alt="" class="avatar-image" />
             <p class="avatar-desc">Jorge</p>
           </div>
@@ -33,6 +34,11 @@
               class="avatar-image"
             />
             <p class="avatar-desc">Ani Melendrez - Programando pasteles</p>
+            =======
+            <img src="./assets/avatar.png" alt="" class="avatar-image" />
+            <p class="avatar-desc">David Marroquin</p>
+            <p class="avatar-desc">ING. sistemas</p>
+            >>>>>>> .merge_file_KVMUJ1
           </div>
         </div>
       </div>
